--- a/testing/Nucleo/Nucleo.ioc
+++ b/testing/Nucleo/Nucleo.ioc
@@ -1,4 +1,9 @@
 #MicroXplorer Configuration settings - do not modify
+ADC.IPParameters=NbrOfConversion,SelectedChannel,LowPowerAutoPowerOff,LowPowerAutoWait
+ADC.LowPowerAutoPowerOff=ENABLE
+ADC.LowPowerAutoWait=ENABLE
+ADC.NbrOfConversion=1
+ADC.SelectedChannel=ADC_CHANNEL_1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -28,45 +33,53 @@ KeepUserPlacement=false
 Mcu.CPN=STM32WL55JCI6
 Mcu.ContextProject=MonoOnDualCore
 Mcu.Family=STM32WL
-Mcu.IP0=ADV_TRACE
-Mcu.IP1=DMA
-Mcu.IP10=TIMER
-Mcu.IP11=TINY_LPM
-Mcu.IP12=USART2
-Mcu.IP2=MISC
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=RTC
-Mcu.IP6=SEQUENCER_M4
-Mcu.IP7=SUBGHZ
-Mcu.IP8=SUBGHZ_PHY
-Mcu.IP9=SYS
-Mcu.IPNb=13
+Mcu.IP0=ADC
+Mcu.IP1=ADV_TRACE
+Mcu.IP10=SUBGHZ_PHY
+Mcu.IP11=SYS
+Mcu.IP12=TIMER
+Mcu.IP13=TINY_LPM
+Mcu.IP14=USART1
+Mcu.IP15=USART2
+Mcu.IP2=DEBUG
+Mcu.IP3=DMA
+Mcu.IP4=MISC
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=RTC
+Mcu.IP8=SEQUENCER_M4
+Mcu.IP9=SUBGHZ
+Mcu.IPNb=16
 Mcu.Name=STM32WL55JCIx
 Mcu.Package=UFBGA73
-Mcu.Pin0=PB15
-Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA3
-Mcu.Pin11=PA2
-Mcu.Pin12=VP_ADV_TRACE_VS_ADV_TRACE
-Mcu.Pin13=VP_MISC_VS_MISC
-Mcu.Pin14=VP_RTC_VS_RTC_Activate
-Mcu.Pin15=VP_RTC_VS_RTC_Calendar
-Mcu.Pin16=VP_SEQUENCER_M4_VS_SEQUENCER
-Mcu.Pin17=VP_SUBGHZ_VS_SUBGHZ
-Mcu.Pin18=VP_SUBGHZ_PHY_VS_SubGhzPhy
-Mcu.Pin19=VP_SYS_VS_None
-Mcu.Pin2=PB9
-Mcu.Pin20=VP_TIMER_VS_TIMER
-Mcu.Pin21=VP_TINY_LPM_VS_TINY_LPM
-Mcu.Pin3=PC15-OSC32_OUT
-Mcu.Pin4=PC3
-Mcu.Pin5=PC5
-Mcu.Pin6=PC4
-Mcu.Pin7=PB0-VDD_TCXO
-Mcu.Pin8=PB11
-Mcu.Pin9=OSC_IN
-Mcu.PinsNb=22
+Mcu.Pin0=PA14
+Mcu.Pin1=PB15
+Mcu.Pin10=PC5
+Mcu.Pin11=PC4
+Mcu.Pin12=OSC_OUT
+Mcu.Pin13=PB11
+Mcu.Pin14=OSC_IN
+Mcu.Pin15=PA3
+Mcu.Pin16=PA2
+Mcu.Pin17=VP_ADV_TRACE_VS_ADV_TRACE
+Mcu.Pin18=VP_MISC_VS_MISC
+Mcu.Pin19=VP_RTC_VS_RTC_Activate
+Mcu.Pin2=PC14-OSC32_IN
+Mcu.Pin20=VP_RTC_VS_RTC_Calendar
+Mcu.Pin21=VP_SEQUENCER_M4_VS_SEQUENCER
+Mcu.Pin22=VP_SUBGHZ_VS_SUBGHZ
+Mcu.Pin23=VP_SUBGHZ_PHY_VS_SubGhzPhy
+Mcu.Pin24=VP_SYS_VS_Systick
+Mcu.Pin25=VP_TIMER_VS_TIMER
+Mcu.Pin26=VP_TINY_LPM_VS_TINY_LPM
+Mcu.Pin3=PA13
+Mcu.Pin4=PB7
+Mcu.Pin5=PB9
+Mcu.Pin6=PC15-OSC32_OUT
+Mcu.Pin7=PB14
+Mcu.Pin8=PC3
+Mcu.Pin9=PB6
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=RTC_N_PREDIV_S,10;RTC_PREDIV_S,((1<<RTC_N_PREDIV_S)-1);RTC_PREDIV_A,((1<<(15-RTC_N_PREDIV_S))-1)
 Mcu.UserName=STM32WL55JCIx
@@ -83,13 +96,19 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SUBGHZ_Radio_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:false
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TAMP_STAMP_LSECSS_SSRU_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TimeBase=None
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-OSC_IN.Mode=HSE-TCXO
+OSC_IN.Mode=HSE-External-Oscillator
 OSC_IN.Signal=RCC_OSC_IN
+OSC_OUT.Mode=HSE-External-Oscillator
+OSC_OUT.Signal=RCC_OSC_OUT
+PA13.Mode=Serial_Wire
+PA13.Signal=DEBUG_JTMS-SWDIO
+PA14.Mode=Serial_Wire
+PA14.Signal=DEBUG_JTCK-SWCLK
 PA2.GPIOParameters=GPIO_Speed,GPIO_Label
 PA2.GPIO_Label=USARTx_TX
 PA2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -102,18 +121,26 @@ PA3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PB0-VDD_TCXO.Mode=HSE-TCXO
-PB0-VDD_TCXO.Signal=VDDTCXO
 PB11.GPIOParameters=GPIO_Speed,GPIO_Label
 PB11.GPIO_Label=LED3
 PB11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB11.Locked=true
 PB11.Signal=GPIO_Output
+PB14.Mode=IN1
+PB14.Signal=ADC_IN1
 PB15.GPIOParameters=GPIO_Speed,GPIO_Label
 PB15.GPIO_Label=LED1
 PB15.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB15.Locked=true
 PB15.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=GPS_RX
+PB6.Mode=Asynchronous
+PB6.Signal=USART1_TX
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=GPS_TX
+PB7.Mode=Asynchronous
+PB7.Signal=USART1_RX
 PB9.GPIOParameters=GPIO_Speed,GPIO_Label
 PB9.GPIO_Label=LED2
 PB9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
@@ -167,7 +194,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-false,2-MX_DMA_Init-DMA-true-HAL-false,3-SystemClock_Config-RCC-false-HAL-false,4-MX_RTC_Init-RTC-true-HAL-false,5-MX_USART2_UART_Init-USART2-true-HAL-false,6-MX_SubGHz_Phy_Init-SUBGHZ_PHY-false-HAL-false,7-MX_SUBGHZ_Init-SUBGHZ-true-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-false,2-MX_DMA_Init-DMA-true-HAL-false,3-SystemClock_Config-RCC-false-HAL-false,4-MX_RTC_Init-RTC-true-HAL-false,5-MX_USART2_UART_Init-USART2-true-HAL-false,6-MX_SubGHz_Phy_Init-SUBGHZ_PHY-false-HAL-false,7-MX_SUBGHZ_Init-SUBGHZ-true-HAL-false,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_ADC_Init-ADC-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -214,10 +241,10 @@ RTC.BinMode=RTC_BINARY_ONLY
 RTC.IPParameters=BinMode,AsynchPrediv
 SUBGHZ.BaudratePrescaler=SUBGHZSPI_BAUDRATEPRESCALER_4
 SUBGHZ.IPParameters=BaudratePrescaler
-SUBGHZ_PHY.Activate_DEBUG_LINE=false
 SUBGHZ_PHY.Activate_RADIO_BOARD_INTERFACE=Bsp
-SUBGHZ_PHY.IPParameters=Activate_DEBUG_LINE,SUBGHZ_APPLICATION,Activate_RADIO_BOARD_INTERFACE,LORA_SPREADING_FACTOR
+SUBGHZ_PHY.IPParameters=SUBGHZ_APPLICATION,Activate_RADIO_BOARD_INTERFACE,LORA_SPREADING_FACTOR,LOW_POWER_DISABLE
 SUBGHZ_PHY.LORA_SPREADING_FACTOR=12
+SUBGHZ_PHY.LOW_POWER_DISABLE=true
 SUBGHZ_PHY.SUBGHZ_APPLICATION=SUBGHZ_ADV_APPLICATION
 SubGHz_Phy.BSP.number=2
 SubGHz_Phy0.BSP.STBoard=false
@@ -240,6 +267,12 @@ SubGHz_Phy1.BSP.mode=Asynchronous
 SubGHz_Phy1.BSP.name=USART
 SubGHz_Phy1.BSP.semaphore=
 SubGHz_Phy1.BSP.solution=USART2
+USART1.BaudRate=9600
+USART1.DMADisableonRxErrorParam=ADVFEATURE_DMA_DISABLEONRXERROR
+USART1.FIFOMode=FIFOMODE_DISABLE
+USART1.IPParameters=VirtualMode-Asynchronous,BaudRate,FIFOMode,DMADisableonRxErrorParam,OverrunDisableParam
+USART1.OverrunDisableParam=ADVFEATURE_OVERRUN_DISABLE
+USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.FIFOMode=FIFOMODE_ENABLE
 USART2.IPParameters=VirtualMode-Asynchronous,FIFOMode
 USART2.VirtualMode-Asynchronous=VM_ASYNC
@@ -257,8 +290,8 @@ VP_SUBGHZ_PHY_VS_SubGhzPhy.Mode=SubGhzPhy_Enabled
 VP_SUBGHZ_PHY_VS_SubGhzPhy.Signal=SUBGHZ_PHY_VS_SubGhzPhy
 VP_SUBGHZ_VS_SUBGHZ.Mode=SUBGHZ_Activate
 VP_SUBGHZ_VS_SUBGHZ.Signal=SUBGHZ_VS_SUBGHZ
-VP_SYS_VS_None.Mode=None
-VP_SYS_VS_None.Signal=SYS_VS_None
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIMER_VS_TIMER.Mode=TIMER_Enabled
 VP_TIMER_VS_TIMER.Signal=TIMER_VS_TIMER
 VP_TINY_LPM_VS_TINY_LPM.Mode=TINY_LPM_Enabled
