--- a/testing/Nucleo/Nucleo.ioc
+++ b/testing/Nucleo/Nucleo.ioc
@@ -30,31 +30,35 @@ Dma.USART2_TX.0.SyncSignalID=NONE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
+LPUART1.BaudRate=9600
+LPUART1.DMADisableonRxErrorParam=UART_ADVFEATURE_DMA_DISABLEONRXERROR
+LPUART1.IPParameters=OverrunDisableParam,DMADisableonRxErrorParam,BaudRate
+LPUART1.OverrunDisableParam=UART_ADVFEATURE_OVERRUN_DISABLE
 Mcu.CPN=STM32WL55JCI6
 Mcu.ContextProject=MonoOnDualCore
 Mcu.Family=STM32WL
 Mcu.IP0=ADC
 Mcu.IP1=ADV_TRACE
-Mcu.IP10=SUBGHZ_PHY
-Mcu.IP11=SYS
-Mcu.IP12=TIMER
-Mcu.IP13=TINY_LPM
-Mcu.IP14=USART1
+Mcu.IP10=SUBGHZ
+Mcu.IP11=SUBGHZ_PHY
+Mcu.IP12=SYS
+Mcu.IP13=TIMER
+Mcu.IP14=TINY_LPM
 Mcu.IP15=USART2
 Mcu.IP2=DEBUG
 Mcu.IP3=DMA
-Mcu.IP4=MISC
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=RTC
-Mcu.IP8=SEQUENCER_M4
-Mcu.IP9=SUBGHZ
+Mcu.IP4=LPUART1
+Mcu.IP5=MISC
+Mcu.IP6=NVIC
+Mcu.IP7=RCC
+Mcu.IP8=RTC
+Mcu.IP9=SEQUENCER_M4
 Mcu.IPNb=16
 Mcu.Name=STM32WL55JCIx
 Mcu.Package=UFBGA73
 Mcu.Pin0=PA14
 Mcu.Pin1=PB15
-Mcu.Pin10=PC5
+Mcu.Pin10=PC0
 Mcu.Pin11=PC4
 Mcu.Pin12=OSC_OUT
 Mcu.Pin13=PB11
@@ -66,20 +70,21 @@ Mcu.Pin18=VP_MISC_VS_MISC
 Mcu.Pin19=VP_RTC_VS_RTC_Activate
 Mcu.Pin2=PC14-OSC32_IN
 Mcu.Pin20=VP_RTC_VS_RTC_Calendar
-Mcu.Pin21=VP_SEQUENCER_M4_VS_SEQUENCER
-Mcu.Pin22=VP_SUBGHZ_VS_SUBGHZ
-Mcu.Pin23=VP_SUBGHZ_PHY_VS_SubGhzPhy
-Mcu.Pin24=VP_SYS_VS_Systick
-Mcu.Pin25=VP_TIMER_VS_TIMER
-Mcu.Pin26=VP_TINY_LPM_VS_TINY_LPM
+Mcu.Pin21=VP_RTC_VS_RTC_WakeUp_intern
+Mcu.Pin22=VP_SEQUENCER_M4_VS_SEQUENCER
+Mcu.Pin23=VP_SUBGHZ_VS_SUBGHZ
+Mcu.Pin24=VP_SUBGHZ_PHY_VS_SubGhzPhy
+Mcu.Pin25=VP_SYS_VS_Systick
+Mcu.Pin26=VP_TIMER_VS_TIMER
+Mcu.Pin27=VP_TINY_LPM_VS_TINY_LPM
 Mcu.Pin3=PA13
-Mcu.Pin4=PB7
-Mcu.Pin5=PB9
-Mcu.Pin6=PC15-OSC32_OUT
-Mcu.Pin7=PB14
-Mcu.Pin8=PC3
-Mcu.Pin9=PB6
-Mcu.PinsNb=27
+Mcu.Pin4=PB9
+Mcu.Pin5=PC15-OSC32_OUT
+Mcu.Pin6=PB14
+Mcu.Pin7=PC3
+Mcu.Pin8=PC5
+Mcu.Pin9=PC1
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=RTC_N_PREDIV_S,10;RTC_PREDIV_S,((1<<RTC_N_PREDIV_S)-1);RTC_PREDIV_A,((1<<(15-RTC_N_PREDIV_S))-1)
 Mcu.UserName=STM32WL55JCIx
@@ -90,15 +95,16 @@ NVIC.DMA1_Channel5_IRQn=true\:2\:0\:true\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.LPUART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.RTC_WKUP_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SUBGHZ_Radio_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TAMP_STAMP_LSECSS_SSRU_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 OSC_IN.Mode=HSE-External-Oscillator
@@ -133,19 +139,19 @@ PB15.GPIO_Label=LED1
 PB15.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB15.Locked=true
 PB15.Signal=GPIO_Output
-PB6.GPIOParameters=GPIO_Label
-PB6.GPIO_Label=GPS_RX
-PB6.Mode=Asynchronous
-PB6.Signal=USART1_TX
-PB7.GPIOParameters=GPIO_Label
-PB7.GPIO_Label=GPS_TX
-PB7.Mode=Asynchronous
-PB7.Signal=USART1_RX
 PB9.GPIOParameters=GPIO_Speed,GPIO_Label
 PB9.GPIO_Label=LED2
 PB9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB9.Locked=true
 PB9.Signal=GPIO_Output
+PC0.GPIOParameters=GPIO_Label
+PC0.GPIO_Label=GPS_RX
+PC0.Mode=Asynchronous
+PC0.Signal=LPUART1_RX
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=GPS_TX
+PC1.Mode=Asynchronous
+PC1.Signal=LPUART1_TX
 PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
@@ -174,7 +180,7 @@ ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32WL55JCIx
 ProjectManager.FirmwarePackage=STM32Cube FW_WL V1.3.0
-ProjectManager.FreePins=false
+ProjectManager.FreePins=true
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
@@ -194,7 +200,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-false,2-MX_DMA_Init-DMA-true-HAL-false,3-SystemClock_Config-RCC-false-HAL-false,4-MX_RTC_Init-RTC-true-HAL-false,5-MX_USART2_UART_Init-USART2-true-HAL-false,6-MX_SubGHz_Phy_Init-SUBGHZ_PHY-false-HAL-false,7-MX_SUBGHZ_Init-SUBGHZ-true-HAL-false,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_ADC_Init-ADC-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-false,2-MX_DMA_Init-DMA-true-HAL-false,3-SystemClock_Config-RCC-false-HAL-false,4-MX_RTC_Init-RTC-true-HAL-false,5-MX_USART2_UART_Init-USART2-true-HAL-false,6-MX_SubGHz_Phy_Init-SUBGHZ_PHY-false-HAL-false,7-MX_SUBGHZ_Init-SUBGHZ-true-HAL-false,8-MX_ADC_Init-ADC-false-HAL-true,9-MX_LPUART1_UART_Init-LPUART1-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -207,17 +213,18 @@ RCC.FLatency=FLASH_LATENCY_2
 RCC.FamilyName=M
 RCC.HCLK3Freq_Value=48000000
 RCC.HCLKFreq_Value=48000000
-RCC.HSE_VALUE=8000000
+RCC.HSE_VALUE=32000000
 RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=48000000
 RCC.I2C2Freq_Value=48000000
 RCC.I2C3Freq_Value=48000000
 RCC.I2S2Freq_Value=16000000
-RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FLatency,FamilyName,HCLK3Freq_Value,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2S2Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM3Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,MCO1PinFreq_Value,MSIClockRange,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,PWR_Regulator_Voltage_Scale,RNGFreq_Value,RTCClockSelection,RTCFreq_Value,SYSCLKFreq_VALUE,USART1Freq_Value,USART2CLockSelection,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
+RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FLatency,FamilyName,HCLK3Freq_Value,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2S2Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM3Freq_Value,LPUART1CLockSelection,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,MCO1PinFreq_Value,MSIClockRange,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,PWR_Regulator_Voltage_Scale,RNGFreq_Value,RTCClockSelection,RTCFreq_Value,SYSCLKFreq_VALUE,USART1CLockSelection,USART1Freq_Value,USART2CLockSelection,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
 RCC.LPTIM1Freq_Value=48000000
 RCC.LPTIM2Freq_Value=48000000
 RCC.LPTIM3Freq_Value=48000000
-RCC.LPUART1Freq_Value=48000000
+RCC.LPUART1CLockSelection=RCC_LPUART1CLKSOURCE_LSE
+RCC.LPUART1Freq_Value=32768
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.MCO1PinFreq_Value=48000000
@@ -231,6 +238,7 @@ RCC.RNGFreq_Value=32000
 RCC.RTCClockSelection=RCC_RTCCLKSOURCE_LSE
 RCC.RTCFreq_Value=32768
 RCC.SYSCLKFreq_VALUE=48000000
+RCC.USART1CLockSelection=RCC_USART1CLKSOURCE_SYSCLK
 RCC.USART1Freq_Value=48000000
 RCC.USART2CLockSelection=RCC_USART2CLKSOURCE_SYSCLK
 RCC.USART2Freq_Value=48000000
@@ -238,7 +246,9 @@ RCC.VCOInputFreq_Value=48000000
 RCC.VCOOutputFreq_Value=384000000
 RTC.AsynchPrediv=RTC_PREDIV_A
 RTC.BinMode=RTC_BINARY_ONLY
-RTC.IPParameters=BinMode,AsynchPrediv
+RTC.IPParameters=BinMode,AsynchPrediv,WakeUpClock-WakeUp,WakeUpCounter-WakeUp
+RTC.WakeUpClock-WakeUp=RTC_WAKEUPCLOCK_CK_SPRE_16BITS
+RTC.WakeUpCounter-WakeUp=10
 SUBGHZ.BaudratePrescaler=SUBGHZSPI_BAUDRATEPRESCALER_4
 SUBGHZ.IPParameters=BaudratePrescaler
 SUBGHZ_PHY.Activate_RADIO_BOARD_INTERFACE=Bsp
@@ -267,12 +277,6 @@ SubGHz_Phy1.BSP.mode=Asynchronous
 SubGHz_Phy1.BSP.name=USART
 SubGHz_Phy1.BSP.semaphore=
 SubGHz_Phy1.BSP.solution=USART2
-USART1.BaudRate=9600
-USART1.DMADisableonRxErrorParam=ADVFEATURE_DMA_DISABLEONRXERROR
-USART1.FIFOMode=FIFOMODE_DISABLE
-USART1.IPParameters=VirtualMode-Asynchronous,BaudRate,FIFOMode,DMADisableonRxErrorParam,OverrunDisableParam
-USART1.OverrunDisableParam=ADVFEATURE_OVERRUN_DISABLE
-USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.FIFOMode=FIFOMODE_ENABLE
 USART2.IPParameters=VirtualMode-Asynchronous,FIFOMode
 USART2.VirtualMode-Asynchronous=VM_ASYNC
@@ -284,6 +288,8 @@ VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
+VP_RTC_VS_RTC_WakeUp_intern.Mode=WakeUp
+VP_RTC_VS_RTC_WakeUp_intern.Signal=RTC_VS_RTC_WakeUp_intern
 VP_SEQUENCER_M4_VS_SEQUENCER.Mode=SEQUENCER_Enabled
 VP_SEQUENCER_M4_VS_SEQUENCER.Signal=SEQUENCER_M4_VS_SEQUENCER
 VP_SUBGHZ_PHY_VS_SubGhzPhy.Mode=SubGhzPhy_Enabled
