Working on version 1:
Hardware:
- Fix empty ZIP files in KiBot template
- Fix missing drill files in KiBot template
- Add optional SWD connector for debugging
- Add minimal variant without UART console and SWD connector

Nucleo Demo:
- Adding Standby mode and wakeup by UART
- Set internal oscillator frequency to 32 MHz to match the external crystal

Signed-off-by: Daniel Kampert <DanielKampert@kampis-elektroecke.de>

--- a/testing/Nucleo/Nucleo.ioc
+++ b/testing/Nucleo/Nucleo.ioc
@@ -200,50 +200,50 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-false,2-MX_DMA_Init-DMA-true-HAL-false,3-SystemClock_Config-RCC-false-HAL-false,4-MX_RTC_Init-RTC-true-HAL-false,5-MX_USART2_UART_Init-USART2-true-HAL-false,6-MX_SubGHz_Phy_Init-SUBGHZ_PHY-false-HAL-false,7-MX_SUBGHZ_Init-SUBGHZ-true-HAL-false,8-MX_ADC_Init-ADC-false-HAL-true,9-MX_LPUART1_UART_Init-LPUART1-false-HAL-true
-RCC.AHBFreq_Value=48000000
-RCC.APB1Freq_Value=48000000
-RCC.APB1TimFreq_Value=48000000
-RCC.APB2Freq_Value=48000000
-RCC.APB2TimFreq_Value=48000000
-RCC.APB3Freq_Value=48000000
-RCC.CortexFreq_Value=48000000
-RCC.FCLKCortexFreq_Value=48000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-false,2-MX_DMA_Init-DMA-true-HAL-false,3-SystemClock_Config-RCC-false-HAL-false,4-MX_RTC_Init-RTC-true-HAL-false,5-MX_USART2_UART_Init-USART2-true-HAL-false,6-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,7-MX_SubGHz_Phy_Init-SUBGHZ_PHY-false-HAL-false,8-MX_SUBGHZ_Init-SUBGHZ-true-HAL-false,9-MX_ADC_Init-ADC-false-HAL-true
+RCC.AHBFreq_Value=32000000
+RCC.APB1Freq_Value=32000000
+RCC.APB1TimFreq_Value=32000000
+RCC.APB2Freq_Value=32000000
+RCC.APB2TimFreq_Value=32000000
+RCC.APB3Freq_Value=32000000
+RCC.CortexFreq_Value=32000000
+RCC.FCLKCortexFreq_Value=32000000
 RCC.FLatency=FLASH_LATENCY_2
 RCC.FamilyName=M
-RCC.HCLK3Freq_Value=48000000
-RCC.HCLKFreq_Value=48000000
+RCC.HCLK3Freq_Value=32000000
+RCC.HCLKFreq_Value=32000000
 RCC.HSE_VALUE=32000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=48000000
-RCC.I2C2Freq_Value=48000000
-RCC.I2C3Freq_Value=48000000
+RCC.I2C1Freq_Value=32000000
+RCC.I2C2Freq_Value=32000000
+RCC.I2C3Freq_Value=32000000
 RCC.I2S2Freq_Value=16000000
 RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FLatency,FamilyName,HCLK3Freq_Value,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2S2Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM3Freq_Value,LPUART1CLockSelection,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,MCO1PinFreq_Value,MSIClockRange,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,PWR_Regulator_Voltage_Scale,RNGFreq_Value,RTCClockSelection,RTCFreq_Value,SYSCLKFreq_VALUE,USART1CLockSelection,USART1Freq_Value,USART2CLockSelection,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
-RCC.LPTIM1Freq_Value=48000000
-RCC.LPTIM2Freq_Value=48000000
-RCC.LPTIM3Freq_Value=48000000
+RCC.LPTIM1Freq_Value=32000000
+RCC.LPTIM2Freq_Value=32000000
+RCC.LPTIM3Freq_Value=32000000
 RCC.LPUART1CLockSelection=RCC_LPUART1CLKSOURCE_LSE
 RCC.LPUART1Freq_Value=32768
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
-RCC.MCO1PinFreq_Value=48000000
-RCC.MSIClockRange=RCC_MSIRANGE_11
-RCC.PLLPoutputFreq_Value=192000000
-RCC.PLLQoutputFreq_Value=192000000
-RCC.PLLRCLKFreq_Value=192000000
-RCC.PWRFreq_Value=48000000
+RCC.MCO1PinFreq_Value=32000000
+RCC.MSIClockRange=RCC_MSIRANGE_10
+RCC.PLLPoutputFreq_Value=128000000
+RCC.PLLQoutputFreq_Value=128000000
+RCC.PLLRCLKFreq_Value=128000000
+RCC.PWRFreq_Value=32000000
 RCC.PWR_Regulator_Voltage_Scale=PWR_REGULATOR_VOLTAGE_SCALE1
 RCC.RNGFreq_Value=32000
 RCC.RTCClockSelection=RCC_RTCCLKSOURCE_LSE
 RCC.RTCFreq_Value=32768
-RCC.SYSCLKFreq_VALUE=48000000
+RCC.SYSCLKFreq_VALUE=32000000
 RCC.USART1CLockSelection=RCC_USART1CLKSOURCE_SYSCLK
-RCC.USART1Freq_Value=48000000
+RCC.USART1Freq_Value=32000000
 RCC.USART2CLockSelection=RCC_USART2CLKSOURCE_SYSCLK
-RCC.USART2Freq_Value=48000000
-RCC.VCOInputFreq_Value=48000000
-RCC.VCOOutputFreq_Value=384000000
+RCC.USART2Freq_Value=32000000
+RCC.VCOInputFreq_Value=32000000
+RCC.VCOOutputFreq_Value=256000000
 RTC.AsynchPrediv=RTC_PREDIV_A
 RTC.BinMode=RTC_BINARY_ONLY
 RTC.IPParameters=BinMode,AsynchPrediv,WakeUpClock-WakeUp,WakeUpCounter-WakeUp
@@ -254,7 +254,7 @@ SUBGHZ.IPParameters=BaudratePrescaler
 SUBGHZ_PHY.Activate_RADIO_BOARD_INTERFACE=Bsp
 SUBGHZ_PHY.IPParameters=SUBGHZ_APPLICATION,Activate_RADIO_BOARD_INTERFACE,LORA_SPREADING_FACTOR,LOW_POWER_DISABLE
 SUBGHZ_PHY.LORA_SPREADING_FACTOR=12
-SUBGHZ_PHY.LOW_POWER_DISABLE=true
+SUBGHZ_PHY.LOW_POWER_DISABLE=false
 SUBGHZ_PHY.SUBGHZ_APPLICATION=SUBGHZ_ADV_APPLICATION
 SubGHz_Phy.BSP.number=2
 SubGHz_Phy0.BSP.STBoard=false
