--- a/testing/Nucleo/Nucleo.ioc
+++ b/testing/Nucleo/Nucleo.ioc
@@ -182,7 +182,7 @@ ProjectManager.DeviceId=STM32WL55JCIx
 ProjectManager.FirmwarePackage=STM32Cube FW_WL V1.3.0
 ProjectManager.FreePins=true
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x200
+ProjectManager.HeapSize=0x000
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
@@ -251,8 +251,9 @@ RTC.WakeUpClock-WakeUp=RTC_WAKEUPCLOCK_CK_SPRE_16BITS
 RTC.WakeUpCounter-WakeUp=10
 SUBGHZ.BaudratePrescaler=SUBGHZSPI_BAUDRATEPRESCALER_4
 SUBGHZ.IPParameters=BaudratePrescaler
+SUBGHZ_PHY.APP_LOG_ENABLED=true
 SUBGHZ_PHY.Activate_RADIO_BOARD_INTERFACE=Bsp
-SUBGHZ_PHY.IPParameters=SUBGHZ_APPLICATION,Activate_RADIO_BOARD_INTERFACE,LORA_SPREADING_FACTOR,LOW_POWER_DISABLE
+SUBGHZ_PHY.IPParameters=SUBGHZ_APPLICATION,Activate_RADIO_BOARD_INTERFACE,LORA_SPREADING_FACTOR,LOW_POWER_DISABLE,APP_LOG_ENABLED
 SUBGHZ_PHY.LORA_SPREADING_FACTOR=12
 SUBGHZ_PHY.LOW_POWER_DISABLE=false
 SUBGHZ_PHY.SUBGHZ_APPLICATION=SUBGHZ_ADV_APPLICATION
